# chat

./: .gitignore  Cargo.toml
backend/: Cargo.toml
backend/docs/: api.md
backend/migrations/: 20250106044354_init.down.sql  20250106044354_init.up.sql
backend/src/: database.rs  handler.rs  main.rs  models.rs
chat_app/: pubspec.yaml
chat_app/ios/Runner.xcodeproj/: project.pbxproj
chat_app/lib/: main.dart
chat_app/lib/api_test/: api_test_view.dart
chat_app/lib/controllers/: chat_controller.dart
chat_app/lib/models/: chat.dart  message.dart
chat_app/lib/service/: chat_api_service.dart
chat_app/lib/view/common/: header.dart
chat_app/lib/view/pages/: chat_page.dart  home_page.dart  login_page.dart
common/: Cargo.toml
common/src/: lib.rs
frontend/: Cargo.toml  index.html  style.css
frontend/src/: api_service.rs  app.rs  main.rs  router.rs  store.rs
frontend/src/components/: chat_message.rs  chat_room_preview.rs  input_field.rs  mod.rs  nav_bar.rs  user.rs
frontend/src/components/atoms/: button.rs  chat_message.rs  chat_room_preview.rs  input_field.rs  mod.rs  nav_bar.rs  token_info.rs
frontend/src/components/molecules/: list_view.rs  login_form.rs  mod.rs  password_change_form.rs  registration_form.rs
frontend/src/pages/: account.rs  associations.rs  change_password.rs  chat.rs  home.rs  login.rs  mod.rs  registration.rs
frontend/src/widgets/: login_form.rs  mod.rs  new_room_form.rs  password_change_form.rs  registration_form.rs  user_search.rs
server/: .env  Cargo.toml  README.md
server/migrations/: 20230713113308_init.down.sql  20230713113308_init.up.sql
server/src/: main.rs
server/src/api/: api.rs
server/src/database/: database.rs
server/src/models/: account.rs  authenticate.rs  message.rs  mod.rs
