[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
argon2 = "0.5.3"
env_logger = "0.11.6"
log = "0.4.22"
sqlx = { version = "0.8.3", features = [ "runtime-async-std", "mysql" ] }
common = { version = "0.1.0", path = "../common" }
serde_json = "1.0.134"
dotenv = "0.15.0"
const_format = "0.2.34"
uuid = { version = "1.11.0", features = [ "v4" ] }
serde = "1.0.217"
actix-web-httpauth = "0.8.2"
